修改部分描述