@@ -20,7 +20,7 @@ public class Main {
 
 1. 代码中的`array1`占用了多少内存空间？
 2. 类似`array2`这样的Byte包装类如何计算？
-3. 分配多少内存空间可以刚好存下这样大的数组呢？
+3. 设置多少内存空间可以刚好存下这样大的数组？
 
 > 以下讨论默认64位机
 
@@ -35,7 +35,7 @@ public class Main {
 
 其中 Mark Word 的大小为 8byte，Class Metadata Address大小为 8byte，但目前在JDK 1.6版本之后默认开启了压缩指针，这块的大小默认是 4byte（可以通过 `-XX:-UseCompressedOops` 关闭压缩指针），Array Length 仅在对象为数组时有，大小为 4byte。由此可以计算出，默认情况下，对于非数组对象的对象头大小为 `8byte（Mark Word） + 4byte（Class Metadata Address） + 4byte（Padding）= 16byte`，数组对象的对象头的大小为 `8byte + 4byte + 4byte（Array Length） = 16byte`，如果关闭压缩指针，Class Metadata Address 大小为 8byte，则非数组对象和数组对象的对象头大小分别为 16byte 和 24byte。
 
-**实例数据** 是对象真正存储的有效数据，这块的大小分配跟对象的结构有关，不同类型的数据大小如下表所示：
+**实例数据** 是对象真正存储的有效数据，这块的大小分配跟对象的类型有关，不同类型的数据大小如下表所示：
 
 数据类型|在内存中的大小
 :-:|:-:
@@ -60,7 +60,7 @@ reference|4byte(关闭指针压缩则为8byte)
 
 但对于问题中的大数组，JVM对于这样的大对象会直接将其存储在 `OldGen` 中，那么可以推测，byte[] 数组的大小不能超过 `OldGen` 的大小，否则就会直接抛出异常。
 
-对于上文中设置的 -Xmx64m，JVM默认的`YoungGen`和`OldGen`空间比例为1：2，加上参数 `-XX:PrintGCDetails`并令程序空跑一次，得到堆的信息：
+JVM默认的`YoungGen`和`OldGen`空间比例为 1:2，对于上文中设置的 -Xmx64m，加上参数 `-XX:+PrintGCDetails`并令程序空跑一次，得到堆的信息：
 
 ![图片加载失败](https://maxwell-blog.cn/image/oldgen.png)
 
@@ -70,7 +70,7 @@ reference|4byte(关闭指针压缩则为8byte)
 
 ![图片加载失败](https://maxwell-blog.cn/image/bytearray1.png)
 
-可以看到 `OldGen`的空间被100%使用了，这时候只需要将数组的大小减1即会抛出异常，同理，对于Byte[]及其它包装类的数组，可以分配的长度则为 `1024 * 1024 * 43 / 4 - 4`，最后减4而不是减16是因为包装类数组每多一个长度增加的大小为4byte（reference的大小），故减去4个就可以留出16byte大小给对象头使用。
+可以看到 `OldGen`的空间被100%使用了，这时候只需要将数组的长度加 1 即会抛出异常，同理，对于Byte[]及其它包装类的数组，可以分配的长度则为 `1024 * 1024 * 43 / 4 - 4`，最后减4而不是减16是因为包装类数组每多一个长度增加的大小为 4byte（reference的大小），故减去4个就可以留出 16byte 大小给对象头使用。
 
 如果通过指令 `-XX:-UseCompressedOops` 关闭指针压缩，此时数组对象的对象头大小为24byte，再次执行上述代码就会抛出异常。对于byte[]数组长度需要减去24，留出24byte给对象头，而对于包装类的数组，不仅对象头变为24byte，而且实例数据中reference的大小变为8byte，因此可以存储的数组长度为 `1024 * 1024 * 43 / 8 - 3`，最后的减3同样是为了留出24byte给对象头。
 
